deploy/frontend/_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  type: LoadBalancer
